WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
218911
Non-unified build fixes, mid November 2020 edition
https://bugs.webkit.org/show_bug.cgi?id=218911
Summary
Non-unified build fixes, mid November 2020 edition
Don Olmstead
Reported
2020-11-13 09:54:19 PST
They were warned...They are doomed...And on Friday the 13th, nothing will save them.
Attachments
Patch
(4.88 KB, patch)
2020-11-13 09:59 PST
,
Don Olmstead
fujii
: review+
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Patch
(6.09 KB, patch)
2020-11-16 10:37 PST
,
Don Olmstead
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Don Olmstead
Comment 1
2020-11-13 09:59:15 PST
Created
attachment 414058
[details]
Patch
Don Olmstead
Comment 2
2020-11-16 10:37:20 PST
Created
attachment 414251
[details]
Patch Previous patch is stale
EWS
Comment 3
2020-11-16 12:05:22 PST
Committed
r269868
: <
https://trac.webkit.org/changeset/269868
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 414251
[details]
.
Radar WebKit Bug Importer
Comment 4
2020-11-16 12:06:37 PST
<
rdar://problem/71452441
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug