Non-unified build fixes, mid November 2020 edition https://bugs.webkit.org/show_bug.cgi?id=218911

Unreviewed build fix.


Source/WebCore:

* display/css/DisplayBoxFactory.h:
* page/Quirks.cpp:
* rendering/style/GridPosition.cpp:

Source/WebKit:

* UIProcess/SpeechRecognitionServer.cpp:
(WebKit::SpeechRecognitionServer::start):
(WebKit::SpeechRecognitionServer::requestPermissionForRequest):
(WebKit::SpeechRecognitionServer::sendUpdate):


Canonical link: https://commits.webkit.org/231626@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@269868 268f45cc-cd09-0410-ab3c-d52691b4dbfc